# gemini-cert

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NLBNPIT302V1.md  XS3315218175.md  run.sh
.github/workflows/: ghrc.yml
config/: models.csv
config_files/: models.csv
src/: definitions.rs  main.rs
src/definitions/: args.rs  resp_types.rs
